# agent-cookbook

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cookbooks/: api_tool_schema_to_function.ipynb  huggingface_inference_client.ipynb  langgraph-mcp.ipynb  langgraph_advanced_tracing.ipynb  langgraph_basic.ipynb  langgraph_tool.ipynb  log.txt  python_executor.ipynb  smolagent_image.ipynb  smolagents.ipynb
documents/: ast_python_executor_explained.md  langgraph_concepts.md
src/agent/: main.py
