[project]
name = "agent-experiment"
version = "0.1.0"
description = "Experimenting with agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-search-results>=2.4.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.18",
    "langfuse>=2.60.7",
    "langgraph>=0.4.7",
    "mcp>=1.8.0",
    "python-dotenv>=1.1.0",
    "smolagents[docker,e2b,litellm,mcp,openai,telemetry,toolkit]>=1.15.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.4.4",
    "pre-commit>=3.5.0",
    "nbqa>=1.8.5",
]

[project.scripts]
agent-experiment = "agent.main:main"

